--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,12 +15,25 @@
 }
 
 /* page center */
+section{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 /* shared styles */
 .link-decoration{
     text-decoration: none;
 }
 .span-color{
     color: #E95A08;
+}
+.btn-decoration{
+    background-color: #E95A08;
+    color: #FFFFFF;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
 }
 
 /* navbar styles */
@@ -33,14 +46,19 @@
    align-items: center;
 }
 .nav-container, .banner-container{
-    max-width: 1140px;
+    max-width:1140px;
     margin: 0 auto;
 } 
 .navigations ul{
     display: flex;
 }
+.navigations{
+    margin-right: 4.5px;
+}
 .nav-items{
     list-style: none;
+}
+.home, .shop, .aboutUs{
     margin-right: 48px;
 }
 .home{
@@ -74,6 +92,60 @@
     font-size: 1rem;
 }
 
+/* card section styles */
+.plants-card{
+    max-width: 1140px;
+    margin: 0 auto;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.cards-container{
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    margin: 0 auto;
+}
+.btn-cart{
+    height: 50px;
+    width: 270px;
+}
+.title{
+    font-weight: 700;
+    font-size: 3.125rem;
+}
+.description{
+    font-size: 1.375rem;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 49px;
+}
+.plant-name{
+    font-weight: 500;
+    font-size: 1.375rem;
+}
+.plant-price{
+    font-weight: 700;
+    font-size: 1.375rem;
+}
+
+/* subscription section styles */
+.subscription{
+    margin-top: 120px;
+    text-align: center;
+    background-image: url("../assets/news-letter-bg.png");
+    max-width: 1440px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 533px;
+}
+.subscription-title{
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
 /* responsive media query */
 @media screen and (max-width: 576px){
     .nav-container{
@@ -85,8 +157,20 @@
     .banner-container{
         display: flex;
         flex-direction: column-reverse;
+        margin-top: 28px;
     }
     .banner-title-description{
         width: auto;
+    }
+    .plants-card{
+        padding: 0 12px;
+        max-width: 100%;
+        margin: 0 auto;
+    }
+    .cards-container{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
     }
 }
