--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,7 @@ section{
     font-weight: 600;
     border: none;
     cursor: pointer;
+    padding: 0 19px;
 }
 
 /* navbar styles */
@@ -136,14 +137,34 @@ section{
     text-align: center;
     background-image: url("../assets/news-letter-bg.png");
     max-width: 1440px;
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     height: 533px;
+    max-width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.input-field{
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 836px;
+    width: 100%;
+}
+#Email{
+    border: none;
+    height: 40px;
+    width: 100%;
+}
+.subscribe-btn{
+    height: 42px;
 }
 .subscription-title{
     color: #FFFFFF;
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 2.20rem;
+    width: 550px;
 }
 
 /* responsive media query */
