--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,64 @@ a:hover{
     font-weight: 700;
     font-size: 1.375rem;
 }
+/* deals section styles */
+.deal-plant{
+    max-width: 1140px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 28px;
+
+}
+.bloom-plant{
+    background-image: url("../assets/deal-bloom.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 201px;
+    border-radius: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 25px;
+}
+.bloom-plant::before{
+    content: "";
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+    border-radius: 14px;
+}
+.bloom-plant-shop{
+    position: relative;
+    z-index: 2;
+}
+.bloom-title{
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: white;
+}
+.ana-plant{
+    background-image: url("../assets/deal-ana.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 197px;
+    border-radius: 14px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.zabo-plant{
+    background-image: url("../assets/deal-zabo.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 423.12px;
+    border-radius: 22px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 /* subscription section styles */
 .subscription{
