--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,9 +144,23 @@ a:hover{
     max-width: 1140px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 367px 1fr;
     gap: 28px;
 
+}
+.deal-title{
+    font-weight: 700;
+    font-size: 3.125rem;
+}
+.deal-description{
+    font-size: 1.375rem;
+    max-width: 888px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    color: rgba(0, 0, 0, 0.5);
+}
+.bloom-ana{
+    width: 100%;
 }
 .bloom-plant{
     background-image: url("../assets/deal-bloom.png");
@@ -161,21 +175,42 @@ a:hover{
     flex-direction: column;
     margin-bottom: 25px;
 }
-.bloom-plant::before{
+.bloom-plant, .ana-plant, .zabo-plant{
+    position: relative;
+}
+.bloom-plant::before, .ana-plant::before, .zabo-plant::before{
     content: "";
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.4);
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: inherit;
     z-index: 1;
-    border-radius: 14px;
 }
-.bloom-plant-shop{
+.bloom-plant-shop, .ana-plant-shop, .zabo-plant-shop{
     position: relative;
     z-index: 2;
 }
-.bloom-title{
+.bloom-title, .ana-title{
     font-size: 1.25rem;
     font-weight: 700;
     color: white;
+}
+.zabo-title{
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #ffffff;
+}
+.ana-shop, .bloom-shop{
+    font-weight: 600;
+    font-size: 1rem;
+}
+.ana-shop .link-decoration, .bloom-shop .link-decoration, .zabo-shop .link-decoration{
+    color: white;
+    text-decoration: underline;
+}
+.zabo-shop{
+    font-weight: 600;
+    font-size: 1.75rem;
 }
 .ana-plant{
     background-image: url("../assets/deal-ana.png");
@@ -192,6 +227,7 @@ a:hover{
     background-size: cover;
     background-repeat: no-repeat;
     height: 423.12px;
+    width: 100%;
     border-radius: 22px;
     display: flex;
     flex-direction: column;
