--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,6 +139,48 @@ a:hover{
     font-weight: 700;
     font-size: 1.375rem;
 }
+/* Lover section styles */
+.lover-container{
+    max-width: 1140px;
+    margin: 0 auto;
+    margin-top: 120px;
+    margin-bottom: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    text-align: start;
+}
+.lover-img{
+    position: relative;
+    display: inline-block;
+}
+.badge{
+    position: absolute;
+    top: -127px;
+    left: 347px;
+    width: 286px;
+    height: 286px;
+    z-index: 2;
+}
+.store{
+    display: block;
+    max-width: 540px;
+    height: 597px;
+}
+.lover-title{
+    font-size: 3.125rem;
+    font-weight: 700;
+}
+.lover-description{
+    font-size: 1.375rem;
+    color: rgba(0, 0, 0, 0.5);
+}
+.lover-title-description ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 /* deals section styles */
 .deal-plant{
     max-width: 1140px;
@@ -278,6 +320,11 @@ footer{
     align-items: start;
     justify-content: space-between;
     padding: 0 50px;
+}
+.shop-description{
+    color: rgba(0, 0, 0, 0.5);
+    font-size: 1rem;
+    max-width: 359px;
 }
 .other-pages ul li{
     display: flex;
